--- a/package.json
+++ b/package.json
@@ -14,21 +14,48 @@
     "dash": true
   },
   "dependencies": {
-    "next": "14.2.23",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "@cloudflare/next-on-pages": "^1.13.12",
+    "@next/env": "^15.3.1",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-checkbox": "^1.1.5",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-hover-card": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.2.0",
+    "@supabase/supabase-js": "^2.49.4",
+    "@uidotdev/usehooks": "^2.4.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
+    "flutterwave-react-v3": "^1.3.2",
+    "framer-motion": "^12.6.3",
+    "lucide-react": "^0.503.0",
+    "motion": "^12.9.2",
+    "next": "15.2.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-spinners": "^0.17.0",
+    "recharts": "^2.15.3",
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.5",
+    "vaul": "^1.1.2",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@opennextjs/cloudflare": "1.0.0-beta.3",
-    "@types/node": "22.14.1",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.2.5",
-    "postcss": "8.5.3",
-    "tailwindcss": "3.4.17",
-    "typescript": "5.8.3",
-    "wrangler": "4.12.0"
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.2.4",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   },
   "scripts": {
     "build": "next build",
