--- a/package.json
+++ b/package.json
@@ -55,7 +55,11 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@opennextjs/cloudflare": "1.0.0-beta.3",
+    "wrangler": "4.12.0"
+
+
   },
   "scripts": {
     "build": "next build",
