--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "flutterwave-node-v3": "^1.3.0",
+    "flutterwave-node-v3-withtypes": "^1.0.11",
     "flutterwave-react-v3": "^1.3.2",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.503.0",
@@ -39,6 +41,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-paystack": "^6.0.0",
     "react-spinners": "^0.17.0",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0",
@@ -58,8 +61,6 @@
     "typescript": "^5",
     "@opennextjs/cloudflare": "1.0.0-beta.3",
     "wrangler": "4.12.0"
-
-
   },
   "scripts": {
     "build": "next build",
